--- a/geoproject/templates/sampleforcss/index.html
+++ b/geoproject/templates/sampleforcss/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta charset="UTF-8">
-    <title>個別ビーコングループ情報＜ビーコンリスト＞ - Beacon Bank（アプリ管理）</title>
+    <title>個別ビーコングループ情報＜ビーコンリスト＞ - （アプリ管理）</title>
     
     <script style="" src="application-0c5a0e5c871853906e95f773cb3eff800a323cfdcd2b0bea2ec8d05a081b6900.js" data-turbolinks-track="true"></script>
     <meta name="csrf-param" content="authenticity_token">
@@ -249,13 +249,13 @@
 
     <footer class="Page-footer PageFooter">
   <h1 class="PageFooter-heading">
-    <a class="u-td-n" href="http://www.unerry.co.jp/" target="_top">
+    <a class="u-td-n" href="http://www..co.jp/" target="_top">
       <svg class="PageFooter-headingIcon"><use xlink:href="#svg_sprite-windows"></use></svg>
-      <span class="PageFooter-headingText">株式会社Unerry</span>
+      <span class="PageFooter-headingText">株式会社</span>
     </a>
   </h1>
   <div class="u-d-f u-ai-c">
-    <span class="u-mr-md">©unerry, inc.</span>
+    <span class="u-mr-md">©, inc.</span>
 
       <a href="http://13.112.171.13/apps/terms">アプリ利用規約</a>
       <span class="PageFooter-divider">|</span>
