Timeline and Heatmap changes

--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-{% load static %}
 <html>
 <head>
     <title>Beacon Map Selection</title>
@@ -7,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!--<link rel="stylesheet" href='{% static "css/style.css" %}'>-->
-    <link href="static/gg/map_js_css/style.css" rel="stylesheet" />
+    <link href="../static/gg/map_js_css/style.css" rel="stylesheet" />
     <script>
         document.oncontextmenu = function (e) {
             console.log(e.button);
@@ -105,16 +104,16 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="static/gg/map_js_css/timeline.js"></script>
+    <script src="../static/gg/map_js_css/timeline.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places&callback=initMap"
             async defer></script>-->
-    <script src="static/gg/map_js_css/heatmap.js"></script>
-    <script src="static/gg/map_js_css/gmaps-heatmap.js"></script>
+    <script src="../static/gg/map_js_css/heatmap.js"></script>
+    <script src="../static/gg/map_js_css/gmaps-heatmap.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <!--<script src='maptheat237\geoproject\static\gg\map_js_css/custom.js'></script>-->
-    <script src="static/gg/map_js_css/custom.js"></script>
+    <script src="../static/gg/map_js_css/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 
