--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -22,6 +22,8 @@
             initMap();
         });
     </script>
+    <style type="text/css">
+    </style>
 </head>
 <body>
     <div class="container">
@@ -50,35 +52,28 @@
                     --->
                     <div id="alert_place"></div>
                 </div>
-
-                <div id="pac-container"><input id="pac-input" type="text" placeholder="Enter a location"</div>
-
-
-
-
+                <div class="addressSearchBox">                    
+                        <input id="pac-input" placeholder="Enter a location" type="text">
+                        <button class="Button Button--round Button--default">Search</button>                    
+                </div>
             </div>
-            <br><br><br>
-            <div id="map" class="col-md-12"></div>
+            <br> 
 
-            <br><br><br>
+            <div id="map" class="col-md-12"></div>
+             
             <div id="infowindow-content">
                 <img src="" width="16" height="16" id="place-icon">
                 <span id="place-name" class="title"></span><br>
                 <span id="place-address"></span>
             </div>
-
             <!---TimeLine Section Begin--->
             <section id="cd-horizontal-timeline"></section>
             <!---TimeLine Section End--->
 
 
-
-
         </div>
     </div>
-
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places&style=element:geometry%7Ccolor:0xf5f5f5&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x616161&style=element:labels.text.stroke%7Ccolor:0xf5f5f5&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:poi%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:road%7Celement:geometry%7Ccolor:0xffffff&style=feature:road.arterial%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:road.highway%7Celement:geometry%7Ccolor:0xdadada&style=feature:road.highway%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:transit.line%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:transit.station%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:water%7Celement:geometry%7Ccolor:0xc9c9c9&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&size=480x360"></script>-->
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="../static/gg/map_js_css/timeline.js"></script>
@@ -92,7 +87,6 @@
     <!--<script src='maptheat237\geoproject\static\gg\map_js_css/custom.js'></script>-->
     <script src="../static/gg/map_js_css/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
 
 </body>
 </html>
