--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -15,12 +15,19 @@
                 return false;
             }
         }
-    </script>
-    <script>
         //Intitialize map on DOM load
         document.addEventListener("DOMContentLoaded", function (event) {
             initMap();
         });
+
+        //Global variables
+        var HeatmapGlobal = function () {
+            var HeatmapExt = {
+                heatmap: '../static/gg/map_js_css/heatmap.json',
+                icons: '../static/gg/map_js_css/icon.json'
+            };
+            return HeatmapExt;
+        }();
     </script>
     <style type="text/css">
     </style>
@@ -52,15 +59,15 @@
                     --->
                     <div id="alert_place"></div>
                 </div>
-                <div class="addressSearchBox">                    
-                        <input id="pac-input" placeholder="Enter a location" type="text">
-                        <button class="Button Button--round Button--default">Search</button>                    
+                <div class="addressSearchBox">
+                    <input id="pac-input" placeholder="Enter a location" type="text">
+                    <button class="Button Button--round Button--default">Search</button>
                 </div>
             </div>
-            <br> 
+            <br>
 
             <div id="map" class="col-md-12"></div>
-             
+
             <div id="infowindow-content">
                 <img src="" width="16" height="16" id="place-icon">
                 <span id="place-name" class="title"></span><br>
@@ -70,7 +77,26 @@
             <section id="cd-horizontal-timeline"></section>
             <!---TimeLine Section End--->
 
+            <table class="table-fill" id="tblLocation">
+                <thead>
+                    <tr>
+                        <th class="text-left">Date</th>
+                        <th class="text-left">Longitude</th>
+                        <th class="text-left">Latitude</th>
+                    </tr>
+                </thead>
+                <tbody class="table-hover">
+                    <tr>
+                        <td class="text-left" id="tdDate"></td>
+                        <td class="text-left" id="tdLong"></td>
+                        <td class="text-left" id="tdLat"></td>
+                    </tr>
+                </tbody>
+            </table>
 
+            <br />
+            <br />
+            <br />
         </div>
     </div>
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places&style=element:geometry%7Ccolor:0xf5f5f5&style=element:labels.icon%7Cvisibility:off&style=element:labels.text.fill%7Ccolor:0x616161&style=element:labels.text.stroke%7Ccolor:0xf5f5f5&style=feature:administrative.land_parcel%7Celement:labels.text.fill%7Ccolor:0xbdbdbd&style=feature:poi%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:poi%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:poi.park%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:poi.park%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:road%7Celement:geometry%7Ccolor:0xffffff&style=feature:road.arterial%7Celement:labels.text.fill%7Ccolor:0x757575&style=feature:road.highway%7Celement:geometry%7Ccolor:0xdadada&style=feature:road.highway%7Celement:labels.text.fill%7Ccolor:0x616161&style=feature:road.local%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&style=feature:transit.line%7Celement:geometry%7Ccolor:0xe5e5e5&style=feature:transit.station%7Celement:geometry%7Ccolor:0xeeeeee&style=feature:water%7Celement:geometry%7Ccolor:0xc9c9c9&style=feature:water%7Celement:labels.text.fill%7Ccolor:0x9e9e9e&size=480x360"></script>-->
