--- a/geoproject/static/gg/map_js_css/style.css
+++ b/geoproject/static/gg/map_js_css/style.css
@@ -527,7 +527,7 @@ Main Components
 }
 
 .addressSearchBox {
-    z-index: 1; position: absolute; right: 0px; top: 11%;padding-right: 20px;
+    z-index: 1; position: absolute; right: 0px; padding: 50px 20px 0px 0px;
 }
 
 /*******************************Location Table ***********************************************/
