--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -7,6 +7,7 @@
     <link href="../static/gg/map_js_css/js_css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
     <link href="../static/gg/map_js_css/style.css" rel="stylesheet" />
     <script>
+    /*
         document.oncontextmenu = function (e) {
             console.log(e.button);
             if (e.button == 2) {
@@ -14,6 +15,7 @@
                 return false;
             }
         }
+     */
         //Intitialize map on DOM load
         document.addEventListener("DOMContentLoaded", function (event) {
             initMap();
@@ -29,43 +31,145 @@
         }();
     </script>
     <style type="text/css">
+
+     .addressSearchBox {   z-index: 1; float: right; }
+
+
+#map {
+    height: 400px;
+}
+
+#description {
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+#infowindow-content .title {
+    font-weight: bold;
+}
+
+#infowindow-content {
+    display: none;
+}
+
+#map #infowindow-content {
+    display: inline;
+}
+
+.pac-card {
+    margin: 10px 10px 0 0;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+    font-family: Roboto;
+}
+
+#pac-container {
+    padding-bottom: 12px;
+    margin-right: 12px;
+}
+
+.pac-controls {
+    display: inline-block;
+    padding: 5px 11px;
+}
+
+    .pac-controls label {
+        font-family: Roboto;
+        font-size: 10px;
+        font-weight: 300;
+    }
+
+#pac-input {
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 9px;
+    font-weight: 300;
+
+    margin-left: 0px;
+        padding: 2px 0px 2px 5px;
+    text-overflow: ellipsis;
+    width: 150px;
+    border-radius: 999px;
+    text-align: left !important;
+    margin-right: 10px !important;
+    height: 12px;
+    outline:none;
+    border: 2px solid rgb(174, 174, 174);
+}
+
+    #pac-input:focus {
+        border-color: #4d90fe;
+    }
+
+
+
+.Button--round.Button--default {
+    color: rgb(255, 255, 255);
+    background-color: rgb(125, 139, 157);
+    box-shadow: 1px 1px rgb(148, 160, 175) inset, -1px -1px rgb(110, 126, 146) inset;
+    margin-right: 15px;
+
+}
+
+
+.Button--round {
+    border-radius: 26px;
+    font-weight: bold;
+}
+
+.Button {
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 0px;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    white-space: nowrap;
+    -moz-user-select: none;
+    border: 1px solid transparent;
+    padding: 0px 1.4em;
+    font-size: 10px;
+    line-height: 20px;
+    min-height: 20px;
+    letter-spacing: 0.1em;
+
+}
+
+
+
+.btn-group-lg > .btn, .btn-lg {
+    padding: .25rem 0.5rem;
+    font-size: 0.85rem;
+    border-radius: .3rem;
+}
+
+.btn-group-sm > .btn, .btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    border-radius: .2rem;
+}
+
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="pac-card col-md-12">
-            <div>
-                <div id="title">Beacon Map Selection</div>
-                <div id="type-selector" class="pac-controls">
-                    <!---
-                              <input type="radio" name="type" id="changetype-all" checked="checked">
-                              <label for="changetype-all">All</label>
-
-                              <input type="radio" name="type" id="changetype-establishment">
-                              <label for="changetype-establishment">Establishments</label>
-
-                              <input type="radio" name="type" id="changetype-address">
-                              <label for="changetype-address">Addresses</label>
-
-
-                              <input type="radio" name="type" id="changetype-geocode">
-                              <label for="changetype-geocode">Geocodes</label>
-                            </div>
-                            <div id="strict-bounds-selector" class="pac-controls">
-                              <input type="checkbox" id="use-strict-bounds" value="">
-                              <label for="use-strict-bounds">Strict Bounds</label>
-                            </div>
-                    --->
-                    <div id="alert_place"></div>
+        <table style="width:700px" class="pac-card col-md-12">
+          <tr><td>
+                <div  class="addressSearchBox">
+                    <input id="pac-input" placeholder="住所、アレア" type="text"><button class="Button Button--round Button--default">地図切替</button>
                 </div>
-                <div class="addressSearchBox">
-                    <input id="pac-input" placeholder="Enter a location" type="text">
-                    <button class="Button Button--round Button--default">Search</button>
-                </div>
-            </div>
-            <br>
 
-            <div id="map" class="col-md-12"></div>
+          </tr></td><tr><td>
+
+            <div id="map" class="col-md-8"></div>
 
             <div id="infowindow-content">
                 <img src="" width="16" height="16" id="place-icon">
@@ -74,7 +178,17 @@
             </div>
             <!---TimeLine Section Begin--->
             <section id="cd-horizontal-timeline"></section>
-            
+
+
+            </td></tr>
+
+
+           </table>
+
+
+                    <br /><br />
+
+
             <!---Location Table--->
             <table class="table-fill" id="tblLocation">
                 <thead>
@@ -91,8 +205,11 @@
             <br />
             <br />
             <br />
-        </div>
-    </div>    
+
+    </div>
+
+
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmWX0-q2XOLGVD69-MQQSM-r8-9R1CWi4&libraries=visualization,places"></script>    
     <script src="../static/gg/map_js_css/js_css/jquery.min.js"></script>
     <script src="../static/gg/map_js_css/timeline.js"></script>    
@@ -103,5 +220,6 @@
     <script src="../static/gg/map_js_css/js_css/bootstrap.min.js"  integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="../static/gg/map_js_css/custom.js"></script>    
     <script src="../static/gg/map_js_css/js_css/lodash.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
 </body>
 </html>
