Add the final layout

--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -166,7 +166,6 @@
                 <div  class="addressSearchBox">
                     <input id="pac-input" placeholder="住所、アレア" type="text"><button class="Button Button--round Button--default">地図切替</button>
                 </div>
-
           </tr></td><tr><td>
 
             <div id="map" class="col-md-8"></div>
@@ -179,14 +178,15 @@
             <!---TimeLine Section Begin--->
             <section id="cd-horizontal-timeline"></section>
 
+          </tr></td><tr><td>
 
-            </td></tr>
-
+           List of icons with text  <img >  icons 2:  <img>
+           </tr></td>
 
            </table>
 
 
-                    <br /><br />
+  <br /><br />
 
 
             <!---Location Table--->
@@ -203,8 +203,7 @@
             </table>
 
             <br />
-            <br />
-            <br />
+
 
     </div>
 
