--- a/geoproject/templates/heatmap.html
+++ b/geoproject/templates/heatmap.html
@@ -163,6 +163,11 @@
     <div class="container">
         <table style="width:700px" class="pac-card col-md-12">
           <tr><td>
+              <div class="showButton"   style="float: left">
+              </div>
+                  
+
+
                 <div  class="addressSearchBox">
                     <input id="pac-input" placeholder="住所、アレア" type="text"><button class="Button Button--round Button--default">地図切替</button>
                 </div>
